publican/web/menu.css
html {
    overflow-y: scroll;
}
body {
    border: 40px solid #C3C3C3;
    margin: 0;
    padding: 0 10px;
	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
}

body.menu_embeded {
    margin: 0 auto;
    max-width: 100%;
    padding-left: 0px;
    padding-right: 0px;
}

body.toc_embeded {
	/*for web hosting system only*/
	padding: 0em 100px 0px 300px;
	margin: 0 auto;
}

body[dir="rtl"].toc_embeded {
	/*for web hosting system only*/
	padding: 0em 100px 0px 300px;
}

body.notoc {
	margin-left:3em;
	padding-left: 0px;
}

body[dir="rtl"].notoc {
	margin-right:3em;
	padding-right: 0px;
}

a:focus {
    outline: medium none;
}
body > div.book,
body > div.article,
body > div.set,
body > div.preface,
body > div.chapter,
body > div.section,
body > div.appendix,
body > div.part {
    margin-left: auto;
    margin-right: auto;
    max-width: 45em;
    margin-top: 40px;
    margin-bottom:4em;
/*
-webkit-box-shadow: 0 0 0 1px #AAAAAA, 0 0 10px 0 #777777;
   -moz-box-shadow: 0 0 0 1px #AAAAAA, 0 0 10px 0 #777777;
        box-shadow: 0 0 0 1px #AAAAAA, 0 0 10px 0 #777777;
*/
-webkit-box-shadow: 0 .5em 3em #aaa;
   -moz-box-shadow: 0 .5em 3em #aaa;
        box-shadow: 0 .5em 3em #aaa;

    background-color: white;
    padding-left: 30px;
    padding-right: 40px;
    padding-bottom: 20px;
    padding-top: 1px;
}

body[dir="rtl"] > div.book,
body[dir="rtl"] > div.article,
body[dir="rtl"] > div.set,
body[dir="rtl"] > div.preface,
body[dir="rtl"] > div.chapter,
body[dir="rtl"] > div.section,
body[dir="rtl"] > div.appendix,
body[dir="rtl"] > div.part {
    padding-right: 30px;
    padding-left: 40px;
}

body.toc_embeded > div.book,
body.toc_embeded > div.article,
body.toc_embeded > div.set,
body.toc_embeded > div.preface,
body.toc_embeded > div.chapter,
body.toc_embeded > div.section,
body.toc_embeded > div.appendix,
body.toc_embeded > div.part {
	width: 50em;
	padding-top: 1px;
}

.lang_top_box {
/*    margin-top: 4px;*/
}
.langauge_banner {
    border: 1px solid #C3C3C3;
    height: 100px;
    margin-bottom: 10px;
}
.popular_books {
    background-color: #787878;
    height: 50px;
}
.lang_bottom_box {
    background-color: white;
    height: 100%;
    margin-left: 240px !important;
    padding-left: 30px;
    padding-top: 20px;
    position: relative;
    top: 0;
    padding-right: 30px;
}

body[dir="rtl"] .lang_bottom_box {
    margin-left: 0px !important;
    margin-right: 240px !important;
}

.lang_bottom_box:after, .product_bottom_box:after {
    clear: both !important;
    content: "";
    display: block;
    height: 20px;
}
.side_products {
    color: #555555;
    background-color: #F5F5F5;
    float: left;
    padding-top: 20px;
    position: relative;
    width: 240px;
}

body[dir="rtl"] .side_products {
    float: right;
}

.side_products:after {
    clear: both;
    content: " ";
}
.side_products div.link {
    font-size: 12px;
/*    height: 24px; */
    line-height: 1em;
/*    margin-bottom: 10px; */
}
.side_products div.link a {
    color: #333333;
    display: block;
    text-decoration: none;
    padding-left: 25px;
}

body[dir="rtl"] .side_products div.link a {
    padding-left: 0px;
    padding-right: 25px;
}

.side_products div.link a.active {
    background-color: #333333;
    color: #EEEEEE;
    margin:0em;
    position: relative;
}
.side_products div.link a.active { position:relative;
    color: #EEEEEE;
}
.side_products div.link a.active:after {
    margin: 0em;
    left: 100%;
    top: 50%;
    margin-top: -1em;
    border-color: transparent transparent transparent #333;
    border-style: solid;
    border-width: 1em 0em 1em 1em !important;
    content: "";
    display: inline-block;
    position: absolute;
    width: 0;
    z-index: 999;
}

body[dir="rtl"] .side_products div.link a.active:after {
    border-color: transparent #333 transparent transparent;
    border-width: 1em 1em 1em 0em !important;
}

.main_content {
/*    background-color: #F5F5F5; */
    clear: both !important;
    position: relative;
}
.main_content:after {
    clear: both;
    content: "";
    display: block;
    height: 2px;
    width: 100%;
}
.bottom_products {
    display: block;
    font-size: 1.4em;
    margin-top: 20px;
}

.bottom_products .title {
    text-align: center;
}

.bottom_products .title span {
    background-color: #FFFFFF !important;
    color: #999999 !important;
}
.bottom_versions {
    display: block;
    padding-bottom: 10px;
    padding-top: 10px;
}
.bottom_versions:last-child .bottom_books:after {
    clear: both !important;
    content: "";
    display: block;
    width: 100%;
}
.menu .bottom_versions .title span {
    background-color: #EEEEEE;
    display: inline-block;
    left: -20px;
    line-height: 30px;
    margin: 0;
    padding-top: 4px;
    position: relative;
    width: 100%;
}

body[dir="rtl"] .menu .bottom_versions .title span {
    right: -20px;
}

.menu span a, #menu span a {
    color: white;
}

.product_bottom_box {
}

.product_top_box,
.version_top_box {
    min-height: 100px;
    color: #555555;
    font-size: 16px;
    padding-left: 20px;
    padding-right: 20px;
    line-height: 1.25em;
    padding-bottom: 10px;
}

.version_top_box .para,
.product_top_box .para,
.product_top_box .formalpara {
    margin-bottom: 10px;
}


.product_top_box>:first-child,
.version_top_box>:first-child {
    font-size: 18px;
    text-align: center;
}


.product_top_box h5 {
    font-size: 18px;
}


.version_bottom_box {
}
.book_top_box {
    height: 100px;
    margin-bottom: 10px;
}
.book_bottom_box {
    min-height: 200px;
}
.book_versions {
    float: left;
    margin: 0;
    width: 45%;
}

body[dir="rtl"] .book_versions {
    float: right;
}

.book_version {
    background-color: #A3A3A3;
    float: left;
    margin: 5px;
    padding: 5px;
    text-align: center;
    width: 50%;
}

body[dir="rtl"] .book_version {
    float: right;
}
/* ... */

